--- a/s1/g4/Esercizio/start2/frase.css
+++ b/s1/g4/Esercizio/start2/frase.css
@@ -11,7 +11,15 @@
 body {
     background-image: url(background.jpg);
     background-size: contain;
+    overflow: hidden;
     font-family: 'Bree Serif', serif;
+}
+
+footer {
+    text-align: center;
+    font-size: 0.8rem;
+    color: white;
+    padding: 20px;
 }
 
 main {
@@ -23,7 +31,7 @@ main {
 }
 
 #secondaryBackground {
-    width: 1000px;
+    width: 100%;
     height: 250px;
     background-color: rgba(52, 0, 104, 30%);
     display: flex;
@@ -31,8 +39,6 @@ main {
     align-items: center;
     flex-wrap: no-wrap;
     padding-bottom: 20px;
-    border-radius: 10px;
-    border: 10px double #23B5D3;
 }
 
 img {
