--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,1 @@
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-}/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=style.css.map */
