--- a/w2/d3/SASS/css/style.css
+++ b/w2/d3/SASS/css/style.css
@@ -151,14 +151,6 @@ p {
   z-index: 1;
 }
 
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
 .grid {
   display: flex;
   flex-basis: 33%;
@@ -183,24 +175,25 @@ header nav ul li {
   font-size: 24px;
 }
 
-.animation .fade-in {
+.animation {
   opacity: 1;
-  animation-name: fade-in;
+  animation-name: fadeIn;
   animation-iteration-count: 1;
   animation-timing-function: ease-in;
   animation-duration: 2s;
   animation-delay: 1s;
-  animation-fill-mode: both;
 }
-
-@keyframes fade-in {
+@keyframes fadeIn {
   0% {
     opacity: 0;
+    transform: translateY(-25px);
   }
   100% {
     opacity: 1;
+    transform: translateY(0px);
   }
 }
+
 .hero {
   background-color: #640fc5;
   color: #f4f4f4;
