--- a/w2/d3/SASS/style.scss
+++ b/w2/d3/SASS/style.scss
@@ -35,16 +35,7 @@ header {
 }
 
 .animation {
-	@include animation(2s, both, 1s);
-}
-
-@keyframes fade-in {
-	0% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 1;
-	}
+	@include animation(fadeIn, 2s, 0, 0, 1s);
 }
 
 .hero {
