--- a/w2/d4/Esercizio/_bootstrap-overrides.scss
+++ b/w2/d4/Esercizio/_bootstrap-overrides.scss
@@ -7,6 +7,7 @@ $primary: #7550fe;
 $secondary: #ffeeda;
 $info: #f5f4f7;
 $success: #1acb98;
+$light: white;
 
 // 3. Include remainder of required Bootstrap stylesheets
 @import 'bootstrap/variables';
